Bump dependencies and JDK version