@@ -19,9 +19,9 @@
 
 
   <properties>
-    <vertx.version>4.4.1</vertx.version>
-    <netty.version>4.1.90.Final</netty.version>
-    <jackson.version>2.14.0</jackson.version>
+    <vertx.version>4.4.5</vertx.version>
+    <netty.version>4.1.97.Final</netty.version>
+    <jackson.version>2.15.0</jackson.version>
     <loom-test-env.version>0.0.1-SNAPSHOT</loom-test-env.version>
   </properties>
 
@@ -168,10 +168,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
-          <release>19</release>
-          <compilerArgs>
-            --enable-preview
-          </compilerArgs>
+          <release>20</release>
         </configuration>
       </plugin>
       <plugin>
